--- a/birthday-Cake/project-1/index.html
+++ b/birthday-Cake/project-1/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cake</title>
+    <title>Happy Birthday Ayush!</title>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Lato:300italic);
+      @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 
       html,
       body {
@@ -17,11 +19,29 @@
 
       body {
         background: #000000ec;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
 
       .name{
-        font-size: 1.1rem;
+        font-size: 1.5rem;
         font-weight: 600;
+        color: #ff9e9e;
+        text-shadow: 0 0 10px #ff0000;
+        font-family: 'Baloo 2', cursive;
+        margin-top: 20px;
+        animation: glow 2s infinite alternate;
+      }
+
+      @keyframes glow {
+        from {
+          text-shadow: 0 0 5px #ff9e9e, 0 0 10px #ff0000;
+        }
+        to {
+          text-shadow: 0 0 10px #ff9e9e, 0 0 20px #ff0000, 0 0 30px #ff5555;
+        }
       }
 
       #cake {
@@ -30,9 +50,7 @@
         margin: -10em auto 0 auto;
       }
 
-      /* ============================================== Candle
-      */
-
+      /* ============================================== Candle */
       .cake {
         background: #ffffff;
         border-radius: 10px;
@@ -64,9 +82,7 @@
         left: 0;
       }
 
-      /* ============================================== Fire
-      */
-
+      /* ============================================== Fire */
       .fuego {
         border-radius: 100%;
         position: absolute;
@@ -92,9 +108,7 @@
         animation: fuego 0.2s 6.5s infinite;
       }
 
-      /* ============================================== Animation Fire
-      */
-
+      /* ============================================== Animation Fire */
       @keyframes fuego {
         0%, 100% {
           background: rgba(254, 248, 97, 0.5);
@@ -120,13 +134,166 @@
         font-weight: 300;
         font-style:italic;
         text-align: center;
-        h1 {
-          font-size: 1.4em;
+        margin-bottom: 30px;
+      }
+      .text h1 {
+        font-size: 2.5em;
+        color: #f9d5bb;
+        text-shadow: 2px 2px 4px #000;
+        margin-bottom: 10px;
+        animation: bounce 2s infinite;
+      }
+
+      @keyframes bounce {
+        0%, 100% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-10px);
         }
       }
+
+      /* Confetti */
+      .confetti {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background-color: #f00;
+        opacity: 0;
+      }
+
+      /* Balloons */
+      .balloon {
+        position: absolute;
+        width: 60px;
+        height: 70px;
+        border-radius: 50%;
+        animation: float 8s infinite ease-in;
+        opacity: 0;
+      }
+
+      .balloon:before {
+        content: "";
+        position: absolute;
+        width: 2px;
+        height: 50px;
+        background-color: #ccc;
+        bottom: -50px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      @keyframes float {
+        0% {
+          transform: translateY(100vh) rotate(0deg);
+          opacity: 1;
+        }
+        100% {
+          transform: translateY(-100vh) rotate(360deg);
+          opacity: 1;
+        }
+      }
+
+      /* Stars */
+      .star {
+        position: absolute;
+        color: gold;
+        font-size: 20px;
+        animation: twinkle 1s infinite alternate;
+        opacity: 0;
+      }
+
+      @keyframes twinkle {
+        0% {
+          opacity: 0.2;
+          transform: scale(0.8);
+        }
+        100% {
+          opacity: 1;
+          transform: scale(1.2);
+        }
+      }
+
+      /* Birthday message */
+      .birthday-message {
+        position: relative;
+        width: 80%;
+        max-width: 600px;
+        margin: 30px auto;
+        padding: 25px;
+        background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, rgba(255,255,255,0.05) 100%);
+        backdrop-filter: blur(10px);
+        border-radius: 20px;
+        font-family: 'Dancing Script', cursive;
+        font-size: 1.3rem;
+        line-height: 1.8;
+        color: #fff;
+        text-align: center;
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        opacity: 0;
+        animation: fadeIn 2s 8s forwards;
+        z-index: 10;
+      }
+
+      @keyframes fadeIn {
+        to {
+          opacity: 1;
+        }
+      }
+
+      /* Floating hearts */
+      .heart {
+        position: absolute;
+        color: #ff6b6b;
+        font-size: 20px;
+        animation: floatHeart 6s infinite ease-in;
+        opacity: 0;
+      }
+
+      @keyframes floatHeart {
+        0% {
+          transform: translateY(100vh) rotate(0deg);
+          opacity: 0;
+        }
+        20% {
+          opacity: 1;
+        }
+        100% {
+          transform: translateY(-100vh) rotate(360deg);
+          opacity: 0;
+        }
+      }
+
+      /* Decorative elements */
+      .corner-decoration {
+        position: absolute;
+        width: 150px;
+        height: 150px;
+        opacity: 0.1;
+        z-index: -1;
+      }
+
+      .top-left {
+        top: 20px;
+        left: 20px;
+        background: radial-gradient(circle, #ff9e9e 0%, transparent 70%);
+      }
+
+      .bottom-right {
+        bottom: 20px;
+        right: 20px;
+        background: radial-gradient(circle, #ff9e9e 0%, transparent 70%);
+      }
+      svg {
+  overflow: visible;
+}
+path {
+  shape-rendering: geometricPrecision;
+}
     </style>
-  </head>
-  <body>
+</head>
+<body>
       <div class="cake">
         <div class="fuego"></div>
         <div class="fuego"></div>
@@ -282,9 +449,92 @@
         </path>
         <rect x="10" y="475.571" fill="#fefae9" width="180" height="4" />
       </svg>
-      <div class="text">
-      <h1>happy birthday!</h1>
-      <p class="name">Ayush (Billu)</p>
-      </div>
-  </body>
+       <div class="text">
+        <h1>Happy Birthday!</h1>
+        <p class="name">Ayush (Billu)</p>
+    </div>
+    
+    <div class="birthday-message">
+        You have been my constant. College would've felt like a long storm if you weren't there to make it bearable, sometimes even beautiful. Your silent support in my worst moments made the survival of college possible. It's always the little things with you—simple, sweet, and unforgettable. Happy Birthday, Billu. You're truly one of a kind.
+    </div>
+
+    <script>
+        // Create confetti with pastel colors
+        function createConfetti() {
+            const colors = ['#FFD1DC', '#FFECB8', '#B5EAD7', '#C7CEEA', '#E2F0CB', '#FFDAC1'];
+            for (let i = 0; i < 100; i++) {
+                const confetti = document.createElement('div');
+                confetti.className = 'confetti';
+                confetti.style.left = Math.random() * 100 + 'vw';
+                confetti.style.top = -10 + 'px';
+                confetti.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+                confetti.style.transform = 'rotate(' + Math.random() * 360 + 'deg)';
+                confetti.style.width = Math.random() * 10 + 5 + 'px';
+                confetti.style.height = Math.random() * 10 + 5 + 'px';
+                confetti.style.animationDelay = Math.random() * 5 + 's';
+                document.body.appendChild(confetti);
+                
+                setTimeout(() => {
+                    confetti.style.opacity = '1';
+                    confetti.style.transition = 'all ' + (Math.random() * 3 + 2) + 's linear';
+                    confetti.style.top = '100vh';
+                    confetti.style.left = Math.random() * 100 + 'vw';
+                }, Math.random() * 1000);
+            }
+        }
+
+        // Create balloons with pastel colors
+        function createBalloons() {
+            const colors = ['#FFB7B2', '#FFDAC1', '#E2F0CB', '#B5EAD7', '#C7CEEA', '#F8C8DC'];
+            for (let i = 0; i < 15; i++) {
+                const balloon = document.createElement('div');
+                balloon.className = 'balloon';
+                balloon.style.left = Math.random() * 100 + 'vw';
+                balloon.style.backgroundColor = colors[Math.floor(Math.random() * colors.length)];
+                balloon.style.animationDelay = Math.random() * 5 + 's';
+                balloon.style.opacity = '1';
+                document.body.appendChild(balloon);
+            }
+        }
+
+        // Create stars with softer gold
+        function createStars() {
+            for (let i = 0; i < 20; i++) {
+                const star = document.createElement('div');
+                star.className = 'star';
+                star.innerHTML = '★';
+                star.style.left = Math.random() * 100 + 'vw';
+                star.style.top = Math.random() * 100 + 'vh';
+                star.style.animationDelay = Math.random() * 5 + 's';
+                star.style.opacity = '1';
+                star.style.fontSize = (Math.random() * 20 + 10) + 'px';
+                star.style.color = '#FFD700';
+                document.body.appendChild(star);
+            }
+        }
+
+        // Create floating hearts with pastel pink
+        function createHearts() {
+            for (let i = 0; i < 15; i++) {
+                const heart = document.createElement('div');
+                heart.className = 'heart';
+                heart.innerHTML = '❤';
+                heart.style.left = Math.random() * 100 + 'vw';
+                heart.style.animationDelay = Math.random() * 5 + 's';
+                heart.style.opacity = '1';
+                heart.style.fontSize = (Math.random() * 20 + 10) + 'px';
+                heart.style.color = '#FFB6C1';
+                document.body.appendChild(heart);
+            }
+        }
+
+        // Start all animations after cake is fully shown
+        setTimeout(() => {
+            createConfetti();
+            createBalloons();
+            createStars();
+            createHearts();
+        }, 8000);
+    </script>
+</body>
 </html>
