--- a/index.html
+++ b/index.html
@@ -536,19 +536,17 @@ path {
             createHearts();
         }, 8000);
     </script>
-    <audio id="birthday-audio" autoplay loop muted controls>
+    <audio id="birthday-audio" autoplay loop>
         <source src="Happy_birthday_to_you_MIDI(chosic.com).mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
     <script>
         window.addEventListener('load', () => {
-            const audio = document.getElementById('birthday-audio');
-            audio.muted = false;
-            audio.play().catch(() => {
-                // Autoplay might be blocked, user interaction needed
-                console.log('Autoplay blocked, user interaction required to play audio.');
-            });
-        });
+  const audio = document.getElementById('birthday-audio');
+  audio.play().catch((err) => {
+    console.warn('Autoplay with sound failed:', err);
+  });
+});
     </script>
 </body>
 </html>
