--- a/index.html
+++ b/index.html
@@ -540,6 +540,17 @@ path {
   <source src="Happy_birthday_to_you_MIDI(chosic.com).mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
+<script>
+  window.addEventListener("DOMContentLoaded", () => {
+    const audio = document.getElementById("birthday-audio");
+
+    audio.play().catch(() => {
+      document.body.addEventListener("click", () => {
+        audio.play();
+      }, { once: true });
+    });
+  });
+</script>
 
     
 </body>
