--- a/index.html
+++ b/index.html
@@ -537,21 +537,21 @@ path {
         }, 8000);
     </script>
     <audio id="birthday-audio" autoplay loop>
-  <source src="BirthdayCake/Happy_birthday_to_you_MIDI(chosic.com).mp3" type="audio/mpeg">
+  <source src="./Happy_birthday_to_you_MIDI(chosic.com).mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
 <script>
-  window.addEventListener("DOMContentLoaded", () => {
-    const audio = document.getElementById("birthday-audio");
-
+  document.addEventListener('DOMContentLoaded', function () {
+    const audio = document.getElementById('birthday-audio');
     audio.play().catch(() => {
-      document.body.addEventListener("click", () => {
+      document.body.addEventListener('click', () => {
         audio.play();
       }, { once: true });
     });
   });
 </script>
+
 
     
 </body>
