--- a/index.html
+++ b/index.html
@@ -537,9 +537,10 @@ path {
         }, 8000);
     </script>
     <audio id="birthday-audio" autoplay loop>
-  <source src="./Happy_birthday_to_you_MIDI(chosic.com).mp3" type="audio/mpeg">
+  <source src="happy_birthday.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
+
 
 <script>
   document.addEventListener('DOMContentLoaded', function () {
