--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ path {
             createHearts();
         }, 8000);
     </script>
-   <audio id="birthday-audio" autoplay muted loop>
+   <audio id="birthday-audio" autoplay loop>
   <source src="birthday-song.mp3" type="audio/mpeg" />
 </audio>
 
