--- a/index.html
+++ b/index.html
@@ -291,6 +291,15 @@
 path {
   shape-rendering: geometricPrecision;
 }
+        @media (max-width: 600px) {
+  .cake {
+    top: 200px; /* adjust position if needed */
+    width: 4px;
+    height: 28px;
+    z-index: 10;
+  }
+}
+
     </style>
 </head>
 <body>
