--- a/index.html
+++ b/index.html
@@ -52,19 +52,31 @@
 
       /* ============================================== Candle */
       .cake {
-        background: #ffffff;
-        border-radius: 10px;
-        position: absolute;
-        top: 228px;
-        left: 50%;
-        margin-left: -2.4px;
-        margin-top: -8.33333333px;
-        width: 5px;
-        height: 35px;
-        transform: translateY(-300px);
-        backface-visibility: hidden;
-        animation: in 500ms 6s ease-out forwards;
-      }
+    background: #ffffff;
+    border-radius: 10px;
+    position: absolute;
+    top: 50%; /* Center vertically */
+    left: 50%;
+    margin-left: -2.4px;
+    margin-top: -150px; /* Adjust this to position above cake */
+    width: 5px;
+    height: 35px;
+    transform: translateY(-300px);
+    backface-visibility: hidden;
+    animation: in 500ms 6s ease-out forwards;
+    z-index: 10; /* Ensure it's above the cake */
+}
+
+/* Update media query for mobile */
+@media (max-width: 600px) {
+    .cake {
+        top: 50%;
+        margin-top: -120px; /* Adjust for mobile */
+        width: 4px;
+        height: 28px;
+        z-index: 10;
+    }
+}
       .cake:after,
       .cake:before {
         background: rgba(255, 0, 0, 0.4);
@@ -546,7 +558,7 @@ path {
         }, 8000);
     </script>
    <audio id="birthday-audio" autoplay loop>
-  <source src="birthday-song.mp3" type="audio/mpeg" />
+  <source src="happy_birthday.mp3" type="audio/mpeg" />
 </audio>
 
 
